classDiagram
    class EvaluationCriteriaController
    class IEvaluationCriteriaService
    class EvaluationCriteriaService
    class EvaluationCriteria

    EvaluationCriteriaController --> IEvaluationCriteriaService
    IEvaluationCriteriaService <|.. EvaluationCriteriaService
    EvaluationCriteriaService --> EvaluationCriteria
